--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-cachebust": "0.0.6",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^2.0.1",
+    "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.2",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
